# simpletrainer

./: .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  environment.yml  pyproject.toml  requirements.txt
examples/mini/: train.py
examples/mini/mini/: dataset.py  model.py
simpletrainer/: __init__.py  integrations.py  version.py
simpletrainer/common/: attrs_extend.py  attrs_extend.pyi  default_settings.py  oprator.py  protocols.py  registry.py  sign_metric.py  types.py
simpletrainer/common/types/: __init__.py  hints.py  protocols.py  sign_metric.py
simpletrainer/components/: __init__.py  early_stopping.py  label_smoothing.py
simpletrainer/components/adversarial/: __init__.py  fgm.py
simpletrainer/components/basic/: __init__.py  best_model_state_tracker.py  file_handler.py  metric_tracker.py  model_watcher.py  save_best_model.py  save_checkpoint.py  save_trainer_info.py  scaler_monitor.py  timer.py
simpletrainer/components/debug/: __init__.py  try_overfit.py
simpletrainer/components/grad/: __init__.py  grad_clip.py  grad_penalty.py
simpletrainer/components/lr_scheduler/: __init__.py  (+1 more)
simpletrainer/core/: __init__.py  component.py  configs.py  hook.py  info.py  mixins.py  state.py  states.py  trainer.py
simpletrainer/loggers/: __init__.py  base.py  dummy.py  mlflow.py  registry.py  tensorboard.py  wandb.py
simpletrainer/utils/: common.py  itertools.py  torch.py
tests/test_components/: test_label_smoothing.py
tests/test_trainer/: dataset.py  model.py  test_train.py
tests/test_utils/: test_common.py  test_data_info.py
(+10 files in other folders)
